tests/trybuild_fails/not_send_dep.stderr
error[E0277]: `MutexGuard<'static, ()>` cannot be sent between threads safely
  --> tests/trybuild_fails/not_send_dep.rs:31:18
   |
31 |     check_send::<Pair<MyOwner>>();
   |                  ^^^^^^^^^^^^^ `MutexGuard<'static, ()>` cannot be sent between threads safely
   |
   = help: within `NotSend`, the trait `Send` is not implemented for `MutexGuard<'static, ()>`
note: required because it appears within the type `NotSend`
  --> tests/trybuild_fails/not_send_dep.rs:6:8
   |
6  | struct NotSend(MutexGuard<'static, ()>);
   |        ^^^^^^^
   = note: required for `Pair<MyOwner>` to implement `Send`
note: required by a bound in `check_send`
  --> tests/trybuild_fails/not_send_dep.rs:24:18
   |
24 | fn check_send<T: Send>() {}
   |                  ^^^^ required by this bound in `check_send`
